--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="http://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.min.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <script src="sketch.js"></script>
+    <div class="container">
+        <script src="sketch.js"></script>
+    </div>
 </body>
 </html> 
